--- a/src/styles/colors/buttons.styl
+++ b/src/styles/colors/buttons.styl
@@ -63,6 +63,12 @@
 				color $color-primary
 				.svg-icon
 					fill $color-primary
+			&[disabled]:hover
+				border-color $color-dark
+				color $color-light
+				.svg-icon
+					fill $color-light
+
 			&:active
 				box-shadow none
 				border-color $color-dark
